--- a/地图2.0.html
+++ b/地图2.0.html
@@ -18,7 +18,7 @@
     #left {
       width: 80px;
       height: 100%;
-      background-color: rgb(255, 255, 255, 0.9);
+      background-color: rgba(255, 255, 255, 0.9);
       position: fixed;
       left: 0;
       top: 0;
