--- a/地图2.0.html
+++ b/地图2.0.html
@@ -480,7 +480,7 @@
       else if (nowMapState === 1 && buttonState === 0) {
         // ...添加小区覆盖物
         for(let i=0; i<houseArr.length; i++){
-          if(houseArr[i].name === houseArr[id].name){
+          if(houseArr[i].name === name){
             addMarker(houseArr[i].houseArr,'小区');
           }
         }
